tree-sitter-brick/test/corpus/interfaces.txt
===
Basic interface
===

interface Shape {
    fn area(self): i32
}

---

(source_file
  (interface_declaration
    (identifier)
    (required_function
      (identifier)
      (type
          (primitive_type)))))
